# diploma

diploma_sso/: Dockerfile  deployment.yml  docker-compose.yml  main.py  pyproject.toml
diploma_sso/app/: app.py
diploma_sso/app/auth/: auth.py
diploma_sso/app/database/: db.py
diploma_sso/app/endpoints/: common.py  parent.py  tutor.py  user.py
diploma_sso/app/models/: db_models.py  request_models.py
diploma_trainer/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
diploma_trainer/app/: app.py
diploma_trainer/app/endpoints/: sandbox.py
diploma_trainer/app/models/: code_model.py
diploma_trainer/app/tools/: base_images.py  code_runner.py
