[tool.poetry]
name = "diploma-trainer"
version = "0.1.0"
description = ""
authors = ["defrell01 <sashka.sahkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^7.0.0"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
